--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -170,6 +170,20 @@ transform: translateX(5px) !important;
 background:rgba(231, 76, 60, 0.9) !important;
 transform: translateY(-5px) !important;
 }                  
+.navbar-nav{
+margin-right: .5rem;
+
+  }
+
+ .nav-item{
+  margin-right: 3rem;
+ } 
+
+ .logo{
+  margin-right: 1.5rem;
+}
+
+
 @media (max-width: 410px) {
 
 .title-logo{
@@ -181,6 +195,7 @@ transform: translateY(-5px) !important;
   margin-right: 0 !important;
 }
 
+
 }
 
 
@@ -189,4 +204,18 @@ transform: translateY(-5px) !important;
 .title-logo{
   font-size: 0.75rem !important;
 }
+}
+
+
+
+@media (max-width: 768px) {
+  
+.navbar-nav{
+margin-right: 0rem !important;
+
+  }
+
+ .nav-item{
+  margin-right: 0rem !important;
+ } 
 }
